added edit nav and head

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     ></script>
     <title>Kopi Time</title>
   </head>
+
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><span>Kopi</span> time</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,25 +39,94 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link" href="#">Disabled</a>
+            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">Contact Us</a>
           </div>
         </div>
       </div>
     </nav>
 
-    <main id="main-body">
-      <section id="header" class="">
-        <div class="container">
-          <div class="row">
-            <div class="col"></div>
+    <header id="header-body">
+      <div class="container">
+        <div class="row">
+          <div class="header-text text-center">
+            <h2 class="text-decoration-underline">Coffee</h2>
+            <h1 class="text-uppercase" >Life begins after coffee</h1>
+            <p>Welcome to our coffee shop, where every cup is made with love.</p>
+          </div>
+          <div class="header-btn">
+            <a href="" type="button" class="text-decoration-none">READ MORE</a>
+            <a href="" type="button" class="text-decoration-none">ORDER</a>
           </div>
         </div>
-      </section>
+      </div>
+    </header>
+
+    <main id="main-body">
+      <div class="container">
+        <h3 class="title text-center"> <span>M</span>ENU</h3>
+        <hr>
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="card menu-card">
+              <img class="img-fluid" src="image/caramelFrappuccino-removebg-preview.png" alt="">
+              <div class=" menu-text">
+                <a href="" class="text-decoration-none text-center"><p>Caramel Frappuccino</p></a> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="card menu-card">
+              <img class="img-fluid" src="image/coffeeJellyFrappucino-removebg-preview.png" alt="">
+              <div class=" menu-text">
+                <a href="" class="text-decoration-none text-center"><p>Coffee Jelly Frappuccino</p></a> 
+              </div>
+           </div>
+         </div>
+         <div class="col-md-4 col-sm-6">
+          <div class="card menu-card">
+            <img class="img-fluid" src="image/darkMochaFrappuccino-removebg-preview.png" alt="">
+            <div class="menu-text"> 
+              <a href="" class="text-decoration-none text-center"><p>Dark Mocha Frappuccino</p></a> 
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="card menu-card">
+            <img class="img-fluid" src="image/saltedCaramelColdBrew-removebg-preview.png" alt="">
+            <div class=" menu-text">
+              <a href="" class="text-decoration-none text-center"><p>Salted Caramel Cold Brew</p></a> 
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="card menu-card">
+            <img class="img-fluid" src="image/vanillaSweetCreamColdBrew-removebg-preview.png" alt="">
+            <div class=" menu-text">
+              <a href="" class="text-decoration-none text-center"><p>Vanilla Sweet Cream Cold Brew</p></a> 
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="card menu-card">
+            <img class="img-fluid" src="image/whiteMochaFrappuccino-removebg-preview.png" alt="">
+            <div class=" menu-text">
+              <a href="" class="text-decoration-none text-center"><p>White Mocha Frappuccino</p></a> 
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="button-below">
+        <a href="" type="button" class="button"><span class="me-4">SEE MORE</span> <i class="fa-solid fa-angle-right"></i></a>
+      </div>
     </main>
+
+    <br><br><br><br><br>
+  
 
     <footer></footer>
 
